fixed row spacing in event.css on event review page

--- a/ionic/senseus/www/static/css/event.css
+++ b/ionic/senseus/www/static/css/event.css
@@ -325,7 +325,7 @@ border-color: red;
 }
 
 .flex-row, .p0 {
-  padding:0;
+  padding:10px;
 }
 
 .pl1, #event-type-container .item-content {
